apps/grimmory/grimmory-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grimmory
  labels:
    apps.gitops: grimmory
    prometheus: scrape
